chore: build.sbt updated to run from sbt shell